set body padding 0 and applied box sizing to header, fixed overflow error

--- a/app/styles/containers.css
+++ b/app/styles/containers.css
@@ -37,6 +37,7 @@ a:active {
 
 /* header bar */
 .header-bar {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
