--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Public Sans", sans-serif;
   margin: 0;
+  padding: 0;
 }
 
 /* image styles */
